# Nestor

./: .gitignore
OurSon/Pinocchio/: Makefile  README.md  pyproject.toml  requirements.txt
OurSon/Pinocchio/apps/: cli.py  fastapi_app.py
OurSon/Pinocchio/nestor/: config.py  logging.py
OurSon/Pinocchio/nestor/dialogue/: manager.py  session.py
OurSon/Pinocchio/nestor/humor/: safety.py  selector.py  templates.py
OurSon/Pinocchio/nestor/io_utils/: avatar.py  config.json  config_manager.py  json_loader.py  m3_cli.py  m3_jokes.py  stt.py  tts.py
OurSon/Pinocchio/nestor/io_utils/tests/: exemple.json  test_loader.txt
OurSon/Pinocchio/nestor/llm/: client.py  lmstudio.py  openai.py
OurSon/Pinocchio/nestor/memory/: episodic.py  rules.py  semantic.py
OurSon/Pinocchio/nestor/obs/: dash.py  events.py
OurSon/Pinocchio/nestor/persona/: base.py  middleware.py  registry.py
OurSon/Pinocchio/nestor/persona/chakras/: racine.json
OurSon/Pinocchio/nestor/storage/: kv.py  schemas.py  vector.py
OurSon/Pinocchio/nestor/tools/: format_bits.py  guardrails.py  search_local.py  select_joke.py  time.py
OurSon/Pinocchio/scripts/: ingest_jokes.py
OurSon/Pinocchio/scripts/nestor_jokes/family/: poetry.json
OurSon/Pinocchio/scripts/nestor_jokes/sitcom/: sitcom.json
OurSon/Pinocchio/scripts/nestor_jokes/standup/: standup.json
OurSon/Pinocchio/tests/: test_smoke.py
