[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nestor"
version = "0.1.0"
description = "Nestor conversational agent skeleton"
authors = [{name="Sophron Arts"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "chromadb>=0.5",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "rich>=13.7",
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nestor*","apps*","scripts*"]
